Finish pricing table layout

--- a/index.html
+++ b/index.html
@@ -215,9 +215,17 @@
                   NanoShield 3x
                 </h2>
 
-                <!-- <img src="" alt="" class="pricing-card__image" /> -->
+                <img
+                  src="/images/one-bottle-nanoshield.png"
+                  alt="1 Bottle NanoShield 3x"
+                  class="pricing-card__image w-12"
+                />
 
-                <div class="pricing-card__price"></div>
+                <div class="pricing-card__price">
+                  <span class="text-red-600 line-through">Reg &#36;22.95</span>
+                  <span class="font-bold text-2xl">&#36;62.85</span>
+                  <span class="uppercase">&#47; each</span>
+                </div>
 
                 <div class="pricing-card__save">Save &#36;2</div>
 
@@ -239,9 +247,17 @@
                   NanoShield 3x
                 </h2>
 
-                <!-- <img src="" alt="" class="pricing-card__image" /> -->
+                <img
+                  src="/images/four-bottles-nanoshield.png"
+                  alt="4 Bottles NanoShield 3x"
+                  class="pricing-card__image w-44"
+                />
 
-                <div class="pricing-card__price"></div>
+                <div class="pricing-card__price">
+                  <span class="text-red-600 line-through">Reg &#36;91.98</span>
+                  <span class="font-bold text-2xl">&#36;18.85</span>
+                  <span class="uppercase">&#47; each</span>
+                </div>
 
                 <div class="pricing-card__save">Save &#36;16</div>
 
@@ -256,7 +272,7 @@
             </div>
 
             <div role="gridcell">
-              <div class="pricing-card">
+              <div class="pricing-card pricing-card--best-seller">
                 <div class="pricing-card__best best--seller">Best Seller</div>
 
                 <h2 class="pricing-card__name">
@@ -265,9 +281,17 @@
                   NanoShield 3x
                 </h2>
 
-                <!-- <img src="" alt="" class="pricing-card__image" /> -->
+                <img
+                  src="/images/three-bottles-nanoshield.png"
+                  alt="3 Bottles NanoShield 3x"
+                  class="pricing-card__image w-44"
+                />
 
-                <div class="pricing-card__price"></div>
+                <div class="pricing-card__price">
+                  <span class="text-red-600 line-through">Reg &#36;68.85</span>
+                  <span class="font-bold text-2xl">&#36;19.85</span>
+                  <span class="uppercase">&#47; each</span>
+                </div>
 
                 <div class="pricing-card__save">Save &#36;2</div>
 
@@ -289,9 +313,17 @@
                   NanoShield 3x
                 </h2>
 
-                <!-- <img src="" alt="" class="pricing-card__image" /> -->
+                <img
+                  src="/images/two-bottles-nanoshield.png"
+                  alt="2 Bottles NanoShield 3x"
+                  class="pricing-card__image h-32"
+                />
 
-                <div class="pricing-card__price"></div>
+                <div class="pricing-card__price">
+                  <span class="text-red-600 line-through">Reg &#36;68.85</span>
+                  <span class="font-bold text-2xl">&#36;19.85</span>
+                  <span class="uppercase">&#47; each</span>
+                </div>
 
                 <div class="pricing-card__save">Save &#36;2</div>
 
