Update heading class name and properties

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main>
       <section class="product-review">
         <div class="container">
-          <h1 class="heading-one">
+          <h1 class="headline text-center">
             Waterless wash, unmatched shine, and
             <br class="hidden lg:block" />
             graphene nano protection for months!
@@ -116,7 +116,7 @@
             </div>
 
             <div role="gridcell">
-              <h2 class="large-text text-center lg:text-left">
+              <h2 class="headline text-center lg:text-left">
                 Detailing has never been easier, catch all the looks after 10 mins application
               </h2>
 
