Update class names

--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
         <div class="container">
           <div class="about-us-grid" role="grid">
             <div role="gridcell">
-              <img src="/images/car.jpeg" alt="" class="rounded-xl" />
+              <img src="/images/car.jpeg" alt="" class="about-us__image" />
             </div>
 
             <div role="gridcell">
-              <h2 class="headline text-center lg:text-left">
+              <h2 class="about-us__headline headline">
                 Detailing has never been easier, catch all the looks after 10 mins application
               </h2>
 
-              <p class="small-text text-center lg:text-left">
+              <p class="about-us__description small-text">
                 Our Badass Labs scientists developed the only Nano Protective Formula on the market.
                 A home detailing product that uses waterless nanotechnology enhanced with graphene
                 and other wetting agents to securely, safely, and ultimately protect your car from
