Update class names

--- a/index.html
+++ b/index.html
@@ -185,10 +185,14 @@
 
           <div class="how-different-grid" role="grid">
             <div role="row">
-              <figure role="gridcell">
-                <img src="/images/before-after.jpg" alt="Before and After" class="rounded-2xl" />
-                <h3 class="text-center medium-text">Easy-to-Use</h3>
-                <figcaption class="text-center small-text">
+              <figure class="figure-card" role="gridcell">
+                <img
+                  src="/images/before-after.jpg"
+                  alt="Before and After"
+                  class="figure-card__image"
+                />
+                <h3 class="figure-card__heading medium-text">Easy-to-Use</h3>
+                <figcaption class="figure-card__caption small-text">
                   Just spray, wipe and enjoy a car that looks brand new. Lorem Ipsum is simply dummy
                   text of the printing and typesetting industry. Lorem Ipsum has been the industry's
                   standard dummy text ever since the 1500s, when an unknown printer took a galley of
@@ -199,9 +203,14 @@
               </figure>
 
               <figure role="gridcell">
-                <img src="/images/graphene.jpg" alt="Graphene Structure" class="rounded-2xl" />
-                <h3 class="text-center medium-text">Last for Months</h3>
-                <figcaption class="text-center small-text">
+                <img
+                  src="/images/graphene.jpg"
+                  alt="Graphene Structure"
+                  class="figure-card__image"
+                />
+
+                <h3 class="figure-card__heading medium-text">Last for Months</h3>
+                <figcaption class="figure-card__caption small-text">
                   We've ordered all of the products out there, every single one of them. And you
                   know what we found out? They just don't work. That's why our experts in Badass
                   Labs worked for almost 2 years to create a product that simply works! Why? Because
@@ -212,9 +221,9 @@
               </figure>
 
               <figure role="gridcell">
-                <img src="/images/car-layers.jpg" alt="Car Layers" class="rounded-2xl" />
-                <h3 class="text-center medium-text">Catches the Eyes</h3>
-                <figcaption class="text-center small-text">
+                <img src="/images/car-layers.jpg" alt="Car Layers" class="figure-card__image" />
+                <h3 class="figure-card__heading medium-text">Catches the Eyes</h3>
+                <figcaption class="figure-card__caption small-text">
                   Our special 3 layer graphene nano formula. Lorem Ipsum is simply dummy text of the
                   printing and typesetting industry. Lorem Ipsum has been the industry's standard
                   dummy text ever since the 1500s, when an unknown printer took a galley of type and
