--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
   </head>
 
   <body>
-    <div class="special-banner">
-      <div class="container">
-        <p class="special-banner__text">
-          Special Halloween Offer &#8211; Free Delivery Over &#36;90
-        </p>
-      </div>
-    </div>
-
     <header class="header">
+      <div class="special-offer">
+        <div class="container">
+          <p class="special-offer__text">
+            Special Halloween Offer &#8211; Free Delivery Over &#36;90
+          </p>
+        </div>
+      </div>
+
       <div class="container">
         <div>
           <span class="sr-only">Bad Ass Labs</span>
@@ -202,7 +202,7 @@
                 </figcaption>
               </figure>
 
-              <figure role="gridcell">
+              <figure class="figure-card" role="gridcell">
                 <img
                   src="/images/graphene.jpg"
                   alt="Graphene Structure"
@@ -220,7 +220,7 @@
                 </figcaption>
               </figure>
 
-              <figure role="gridcell">
+              <figure class="figure-card" role="gridcell">
                 <img src="/images/car-layers.jpg" alt="Car Layers" class="figure-card__image" />
                 <h3 class="figure-card__heading medium-text">Catches the Eyes</h3>
                 <figcaption class="figure-card__caption small-text">
@@ -351,7 +351,7 @@
 
               <div role="gridcell">
                 <div class="pricing-card">
-                  <div class="pricing-card__best best--value">Best Value</div>
+                  <div class="pricing-card__best best--value transform">Best Value</div>
 
                   <h2 class="pricing-card__name">
                     4 Bottles
@@ -385,7 +385,7 @@
 
               <div role="gridcell">
                 <div class="pricing-card pricing-card--best-seller">
-                  <div class="pricing-card__best best--seller">Best Seller</div>
+                  <div class="pricing-card__best best--seller transform">Best Seller</div>
 
                   <h2 class="pricing-card__name">
                     3 Bottles
