Update product's carousel

--- a/index.html
+++ b/index.html
@@ -49,39 +49,34 @@
             <div role="row">
               <div role="gridcell">
                 <div class="product-image">
-                  <img src="/images/active-product-image.png" alt="Nano Shield" />
+                  <img src="images/active-product-image.png" alt="" />
                 </div>
 
-                <div class="product-gallery">
-                  <button class="product-gallery__arrow left-icon">
-                    <span class="sr-only">Left Arrow</span>
-                    <div class="left-arrow"></div>
-                  </button>
+                <div class="swiper">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img src="/images/product-image-1.jpg" alt="" />
+                    </div>
 
-                  <button class="product-gallery__item">
-                    <img src="/images/product-image-1.jpg" alt="Product Image 1" />
-                  </button>
+                    <div class="swiper-slide">
+                      <img src="/images/product-image-2.jpg" alt="" />
+                    </div>
 
-                  <button class="product-gallery__item">
-                    <img src="/images/product-image-2.jpg" alt="Product Image 2" />
-                  </button>
+                    <div class="swiper-slide">
+                      <img src="/images/product-image-3.jpg" alt="" />
+                    </div>
 
-                  <button class="product-gallery__item">
-                    <img src="/images/product-image-3.jpg" alt="Product Image 3" />
-                  </button>
+                    <div class="swiper-slide">
+                      <img src="/images/product-image-4.jpg" alt="" />
+                    </div>
 
-                  <button class="product-gallery__item">
-                    <img src="/images/product-image-4.jpg" alt="Product Image 4" />
-                  </button>
+                    <div class="swiper-slide">
+                      <img src="/images/product-image-5.jpg" alt="" />
+                    </div>
+                  </div>
 
-                  <button class="product-gallery__item">
-                    <img src="/images/product-image-5.jpg" alt="Product Image 5" />
-                  </button>
-
-                  <button class="product-gallery__arrow right-icon">
-                    <span class="sr-only">Right Arrow</span>
-                    <div class="right-arrow"></div>
-                  </button>
+                  <div class="swiper-button-prev"></div>
+                  <div class="swiper-button-next"></div>
                 </div>
               </div>
 
