--- a/index.html
+++ b/index.html
@@ -160,12 +160,39 @@
 
                 <div class="payment-options">
                   <div class="payment-options__text">We accept payments with:</div>
-                  <div class="payment-options__item paypal"></div>
-                  <div class="payment-options__item visa"></div>
-                  <div class="payment-options__item mastercard"></div>
-                  <div class="payment-options__item mcafee-secure"></div>
-                  <div class="payment-options__item secure-encryption"></div>
-                  <div class="payment-options__item norton-secured"></div>
+                  <div class="payment-options__logos">
+                    <div>
+                      <span class="sr-only">PayPal</span>
+                      <img src="/svg/paypal-logotype.svg" alt="PayPal" />
+                    </div>
+
+                    <div>
+                      <span class="sr-only">Visa</span>
+                      <img src="/svg/visa-logotype.svg" alt="Visa" />
+                    </div>
+
+                    <div>
+                      <span class="sr-only">mastercard</span>
+                      <img src="/svg/mastercard-logotype.svg" alt="mastercard" />
+                    </div>
+                  </div>
+                </div>
+
+                <div class="secured-badges">
+                  <div>
+                    <span class="sr-only">McAfee Secure</span>
+                    <img src="/svg/mcafee-secure-logotype.svg" alt="McAfee Secure" />
+                  </div>
+
+                  <div>
+                    <span class="sr-only">Secure SSL Encryption</span>
+                    <img src="/svg/secure-ssl-logotype.svg" alt="Secure SSL Encryption" />
+                  </div>
+
+                  <div>
+                    <span class="sr-only">Norton Secured powered by VeriSign</span>
+                    <img src="/svg/norton-secured-logotype.svg" alt="Norton Secured" />
+                  </div>
                 </div>
               </div>
             </div>
