Update shopping cart markup

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 
           <div role="gridcell">
             <span class="sr-only">Shopping Cart</span>
-            <div class="header__shopping-cart"></div>
+            <div class="header__shopping-cart">
+              <button>&nbsp;</button>
+              <span class="shopping-cart-items">2</span>
+            </div>
           </div>
         </div>
       </div>
