--- a/index.html
+++ b/index.html
@@ -52,29 +52,29 @@
             <div role="row">
               <div role="gridcell">
                 <div class="product-image">
-                  <img src="images/active-product-image.png" alt="" />
+                  <img src="images/active-product-image.png" alt="Nano Shield 1" />
                 </div>
 
                 <div class="swiper">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="/images/product-image-1.jpg" alt="" />
+                      <img src="/images/product-image-1.jpg" alt="Nano Shield 1" />
                     </div>
 
                     <div class="swiper-slide">
-                      <img src="/images/product-image-2.jpg" alt="" />
+                      <img src="/images/product-image-2.jpg" alt="Nano Shield 2" />
                     </div>
 
                     <div class="swiper-slide">
-                      <img src="/images/product-image-3.jpg" alt="" />
+                      <img src="/images/product-image-3.jpg" alt="Nano Shield 3" />
                     </div>
 
                     <div class="swiper-slide">
-                      <img src="/images/product-image-4.jpg" alt="" />
+                      <img src="/images/product-image-4.jpg" alt="Nano Shield 4" />
                     </div>
 
                     <div class="swiper-slide">
-                      <img src="/images/product-image-5.jpg" alt="" />
+                      <img src="/images/product-image-5.jpg" alt="Nano Shield 5" />
                     </div>
                   </div>
 
